[ESNext][BigInt] Breking tests on Debug build and 32-bits due to missing Exception check https://bugs.webkit.org/show_bug.cgi?id=180746

Reviewed by Saam Barati.

We have some uncatched exceptions that could happen due to OOM into
JSBigInt::allocateFor and JSBigInt::toStringGeneric. This patching is
catching such exceptions properly.

* runtime/JSBigInt.cpp:
(JSC::JSBigInt::allocateFor):
(JSC::JSBigInt::parseInt):
* runtime/JSCJSValue.cpp:
(JSC::JSValue::toStringSlowCase const):


Canonical link: https://commits.webkit.org/196662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225851 268f45cc-cd09-0410-ab3c-d52691b4dbfc